@@ -1,3 +1,4 @@
 # 1.0.3
- - Seed in Script 
+ - Seed in Script
+ - view pram output, warning if a key variable is prammed 
  
